--- a/liz-wheeler.html
+++ b/liz-wheeler.html
@@ -1,12 +1,13 @@
-<html lang="en">
+<html lang="en"></html>
 <head>
+    <link rel="stylesheet" href="liz-wheeler.css">
    <nav>
       <a1 href="#">Plan your <br>Visit</a1>
       <a2 href="#"> Learn about<br> the Park</a2>
       <a3 href="#">Get<br> Involved</a3>
     </nav>
- <img1> <img src= "header_img.jpg">
-   <h1>Yosemite Park Guide</h1> </img1>
+ <img1> <img src= "header_img.jpg"> </img>
+   <h1>Yosemite Park Guide</h1> 
   <p1> Come explore California’s beautiful wilderness.<br></p1>
         
      <br>  <p2> Always open. Reservations are not <br>available or required to enter the<br> park.</p2>
@@ -28,10 +29,9 @@
    <img src="footer_img.png">
  <div class="footer">
  <nav>
-      <a1 href="#">Plan your     Visit</a1>
-      <a2 href="#"> Learn about the Park</a2>
-      <a3 href="#">Get Involved</a3>
-    </nav>
+      <a1 href="#">Plan your <br>    Visit</a1>
+      <a2 href="#"> Learn about<br> the Park</a2>
+      <a3 href="#">Get<br> Involved
       
   </footer>
 </html>
